--- a/assets/style.css
+++ b/assets/style.css
@@ -79,3 +79,15 @@ section{
 .timer .timer-count{
     font-size: 30px;
 }
+
+.questionTxt {
+    font-size: 20px;
+}
+
+button {
+    background-color: darkturquoise;
+}
+
+button:hover {
+    background-color: bisque;
+}
